Закончен блок заводы

--- a/index.html
+++ b/index.html
@@ -1648,7 +1648,8 @@
                     <span>Адрес:</span> КНР, провинция Гуаньчжоу, город Гуаньчжоу, 25 улица д 5 тел. +5(456)-45-485
                 </p>
                 <p class="kelon_text_info">
-                    <span>Наличие собственного цеха по производству компрессоров:</span> Приходите в ВИМТЕХ, проконсультируем, расскажем
+                    <span>Наличие собственного цеха по производству компрессоров:</span> Приходите в ВИМТЕХ,
+                    проконсультируем, расскажем
                 </p>
                 <div class="descript_wrap">
                     <p class="kelon_text_text">
@@ -1685,8 +1686,7 @@
                     <span>Адрес:</span> КНР, провинция Гуаньчжоу, город Гуаньчжоу, 25 улица д 5 тел. +5(456)-45-485
                 </p>
                 <p>
-                    <span>Наличие собственного цеха по производству компрессоров:</span> Да,
-                    <span>Toshiba-GMSS</span>
+                    <span>Наличие собственного цеха по производству компрессоров:</span>Приходите в ВИМТЕХ, проконсультируем, расскажем
                 </p>
             </div>
             <div class="descript_wrap">
@@ -1731,8 +1731,7 @@
                     <span>Адрес:</span> КНР, провинция Гуаньчжоу, город Гуаньчжоу, 25 улица д 5 тел. +5(456)-45-485
                 </p>
                 <p>
-                    <span>Наличие собственного цеха по производству компрессоров:</span> Да,
-                    <span>Toshiba-GMSS</span>
+                    <span>Наличие собственного цеха по производству компрессоров:</span>Приходите в ВИМТЕХ, проконсультируем, расскажем
                 </p>
             </div>
             <div class="descript_wrap">
@@ -1957,16 +1956,21 @@
                     проконсультируем, расскажем
                 </p>
             </div>
-            <p class="tcl_text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex
-                ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit
-                anim id est laborum.
-            </p>
+            <div class="descript_wrap">
+                <p class="tcl_text">
+                    Компания TCL Corporation – один из наиболее крупных китайских производителей электронных товаров.
+                    Основана компания в 1981 году правительством Китая, как предприятие по производству аудиокассет,
+                    выключателей и микроэлементов. Главный офис компании TCL расположен в Южном Китае (г.Хуанчжоу).
+                    Важным моментом для дальнейшего успешного развития компании стало ее признание крупнейшими
+                    корпорациями, такими как Panasonic, Philips, Toshiba. Именно от них компания TCL получила первые
+                    большие заказы на изготовление отдельных элементов для их продукции. Тогда предприятие приступило к
+                    производству соединительных плат, а уже к концу 80-х годов TCL стала выпускать платы для
+                    телевизоров.
+                    В 1992 году компания TCL претерпела значительные структурные изменения за счет инвестиций в ее
+                    развитие от корпораций Panasonic, Philips, Toshiba. Таким образом, была создана компания TCL
+                    Holdings LTD, которая сразу же вошла в пятерку крупнейших
+                </p>
+            </div>
         </div>
         <!--hitachi-->
         <div class="monufactur_bkock hitachi modal" id="hitachi">
