--- a/index.html
+++ b/index.html
@@ -5078,6 +5078,159 @@
             </div>
         </div>
     </section>
+    <div class="mini_footer">
+        <div class="content">
+            <div class="mini_footer_discript">
+                <p>
+                    Стоимость сплит систем в Ростове-на-Дону, цены на кондиционеры с установкой; взаимосвязь цены на сплит и
+                    завода изготовителя бренда – сравниваем и выбираем
+                </p>
+            </div>
+            <div class="mini_footer_act">
+                <div class="mini_footer_act_serch">
+                    <p class="mini_footer_act_serch_input" id="mini_serch">
+                        поис<span>к</span>
+                    </p>
+                    <i class="mini_footer_act_serch_lupa"></i>
+
+                </div>
+                <a href="javascript:void(0)" class="ring">
+                    <p>Звоните<span>:</span></p>
+                    <span>+7 (863)</span> 221-16-87<i></i>
+
+                </a>
+            </div>
+            <div class="mini_footer_timer_wrap">
+                <h3 class="mini_footer_timer_wrap_zag">До конца рабочего дня осталось:</h3>
+                <div class="timer_line">
+                    <div class="timer_line_block" id="mini_timer">
+
+                    </div>
+                </div>
+            </div>
+            <div class="mini_footer_brends">
+
+                <a href="#" class="brend">
+                    <p>Lessar</p>
+                    <span>(Лессар)</span>
+                </a>
+                <a href="#"class="brend">
+                    <p>Tosot</p>
+                    <span>(Тосот)</span>
+                </a>
+                <a href="#" class="brend">
+                    <p>Aero</p>
+                    <span>(Аэро)</span>
+                </a>
+                <a href="#" class="brend">
+                    <p>Toshiba</p>
+                    <span>(Тошиба)</span>
+                </a>
+                <a href="#" class="brend">
+                    <p>Fujitsu</p>
+                    <span>(Фуджицу)</span>
+                </a>
+                <a href="#" class="brend">
+                    <p>Ballu</p>
+                    <span>(Балу)</span>
+                </a>
+                <a href="#" class="brend">
+                    <p>Panasonic</p>
+                    <span>(Панасоник)</span>
+                </a>
+                <a href="#" class="brend">
+                    <p>Daikin</p>
+                    <span>(Дайкин)</span>
+                </a>
+                <a href="#" class="brend">
+                    <p>Mitsubishi Heavy</p>
+                    <span>(Мицубиси Хеви)</span>
+                </a>
+                <a href="#" class="brend">
+                    <p>MDV</p>
+                    <span>(эМДиВи)</span>
+                </a>
+                <a href="#" class="brend">
+                    <p>Mitsubishi Electric</p>
+                    <span>(Мицубиси Электрик)</span>
+                </a>
+                <a href="#" class="brend">
+                    <p>Green</p>
+                    <span>(Грин)</span>
+                </a>
+                <a href="#"  class="brend">
+                    <p>LG</p>
+                    <span>(эЛДЖи)</span>
+                </a>
+                <a href="#" class="brend">
+                    <p>Vertex</p>
+                    <span>(Вертекс)</span>
+                </a>
+                <a href="#" class="mini_footer_brends_all">
+                    <p>показать все бренды</p>
+
+                </a>
+
+            </div>
+            <a href="#" class="mini_footer_brends_price">
+                Полный прайс лист на работы и материалы<span><b>В</b>ИМТЕХ</span>
+            </a>
+            <div class="mini_footer_services">
+                <h3 class="mini_footer_services_zag">Услуги</h3>
+                <div class="mini_footer_services_install">
+                    <a href="#">
+                        <p>Установка</p>
+                        <span> (монтаж сплит систем)</span>
+                    </a>
+                    <a href="#">
+                        <p>Чистка</p>
+                        <span> сервис сплит систем</span>
+                    </a>
+                    <a href="#">
+                        <p class="big">Демонтаж</p>
+
+                    </a>
+                    <a href="#">
+                        <p>Закладка трассы</p>
+                        <span>(монтаж в 2 этапа)</span>
+                    </a>
+                </div>
+                <div class="mini_footer_repairs">
+                    <a href="#">
+                        <p>Ремонт</p>
+                    </a>
+                    <a href="#">
+                        <p>Вызов специаиста</p>
+                    </a>
+                </div>
+            </div>
+            <div class="mini_footer_actions">
+                <h3 class="mini_footer_actions_zag">товары по АКЦИИ</h3>
+                <a href="#">Цены</a>
+                <a href="#">Настенный сплит</a>
+                <a href="#" class="answer">Ответы на вопросы о сплит системах</a>
+                <div class="mini_footer_actions_prise">
+                    <a href="#" class="payment">
+                        <p>Доставка,оплата, гарантия</p>
+                    </a>
+                    <a href="#" class="bascet">
+                        <h5>Моя корзина</h5>
+                        <div class="icon_block">
+                            <span><i></i></span>
+                        </div>
+                        <div class="bascet_price_block">
+                            <p>118 540</p><span>руб.</span>
+                        </div>
+                    </a>
+
+                </div>
+            </div>
+            <div class="black_link">
+                <a href="javascript:void(0)">каталог</a>
+                <a href="javascript:void(0)">контакты</a>
+            </div>
+        </div>
+    </div>
     <footer class="footer">
         <div class="content">
 
