Добавлена логика появления формы реистрации/входа на сайт

--- a/index.html
+++ b/index.html
@@ -3116,7 +3116,7 @@
                             поис<span>к</span>
                         </p>
                         <i class="header__user_info_info_serch_lupa"></i>
-                        <a href="javascript:void(0)" class="header__user_info_info_check">Регистрация</a>
+                        <a href="javascript:void(0)" class="header__user_info_info_check" id="enter">Регистрация</a>
                     </div>
                     <div class="header__user_info_info_select_line">
                         <a href="javascript:void(0)" class="header__user_info_info_select_line_select"
