Добавлена логика сворачивания подменю при выходе курсора  за блок

--- a/index.html
+++ b/index.html
@@ -2555,7 +2555,7 @@
             </div>
             <!--модальное окно логотип конец -->
             <!--модальное окно по брендам начало -->
-            <div class="brend_block" id="brend">
+            <div class="brend_block podmenu" id="brend">
                 <div class="brend_block_box_line">
                     <div class="brend_block_box">
                         <h3 class="brend_block_box_zag">Хорошие, качественные производители</h3>
@@ -2641,7 +2641,7 @@
             </div>
             <!--модальное окно по брендам конец -->
             <!--модальное окно по площади начало -->
-            <div class="area_block" id="area">
+            <div class="area_block podmenu" id="area">
                 <div class="area_block_power_line">
                     <div class="area_block_power_line_block ">
                         <div class="area_block_power_line_block_namder">
@@ -2813,7 +2813,7 @@
             </div>
             <!--модальное окно по площади конец -->
             <!--модальное окно по цене начало -->
-            <div class="price_block" id="price">
+            <div class="price_block podmenu" id="price">
                 <div class="price_block_link">
                     <a href="javascript:void(0)" class="price_block_link_retail price_block_link_block">
                         <img src="img/price.png" alt="" title="">
@@ -2856,7 +2856,7 @@
             </div>
             <!--модальное окно по цене конец -->
             <!--модальное окно мультисплит начало -->
-            <div class="multi_block" id="multi">
+            <div class="multi_block podmenu" id="multi">
                 <div class="multi_block_box multi_block_roof">
                     <h3 class="multi_block_box_zag">Настенно потолочные</h3>
                     <div class="multi_block_box_link_power">
@@ -2906,7 +2906,7 @@
             </div>
             <!--модальное окно мультисплит конец -->
             <!--модальное окно установка сервис начало -->
-            <div class="services_block" id="service">
+            <div class="services_block podmenu" id="service">
                 <div class="services_block_box services_block_link_box">
                     <div class="services_block_link_box_block services_block_link_box_price">
                         <div class="services_block_link_box_block_img_line"><img src="img/price_list.png" alt=""
@@ -2971,7 +2971,7 @@
             </div>
             <!--модальное окно установка сервис окончание -->
             <!--модальное окно выбор начало -->
-            <div class="question_block" id="question">
+            <div class="question_block podmenu" id="question">
                 <div class="question_block_link">
                     <a href="javascript:void(0)">Как правильно выбрать сплит</a>
 
@@ -3120,7 +3120,7 @@
                     </div>
                     <div class="header__user_info_info_select_line">
                         <a href="javascript:void(0)" class="header__user_info_info_select_line_select"
-                           id="multi_bottom">
+                           id="multi_button">
                             <p>Мультисплит<br>
                                 и полупром</p>
                             <i></i>
