--- a/index.html
+++ b/index.html
@@ -2858,22 +2858,7 @@
             <!--модальное окно мультисплит начало -->
             <div class="multi_block podmenu" id="multi">
                 <div class="multi_block_box multi_block_roof">
-                    <h3 class="multi_block_box_zag">Настенно потолочные</h3>
-                    <div class="multi_block_box_link_power">
-                        <a href="javascript:void(0)">Потолочные 24</a>
-                        <a href="javascript:void(0)">Потолочные 36</a>
-                        <a href="javascript:void(0)">Потолочные 48</a>
-                        <a href="javascript:void(0)">Потолочные 60</a>
-                    </div>
-                    <div class="multi_block_box_link_kategories">
-                        <a href="javascript:void(0)">Канальные</a>
-                        <a href="javascript:void(0)">VRF системы</a>
-                        <a href="javascript:void(0)">Колонные</a>
-                        <a href="javascript:void(0)">Вентиляция</a>
-                    </div>
-                </div>
-                <div class="multi_block_box multi_block_kaseta">
-                    <h3 class="multi_block_box_zag">кассетные</h3>
+                    <a href="javascript:void(0)" class="multi_block_box_zag">кассетные</a>
                     <div class="multi_block_box_link_power">
                         <a href="javascript:void(0)">Кассетные 24</a>
                         <a href="javascript:void(0)">Кассетные 36</a>
@@ -2889,8 +2874,23 @@
                         </a>
                     </div>
                 </div>
+                <div class="multi_block_box multi_block_kaseta">
+                    <a href="javascript:void(0)" class="multi_block_box_zag">Настенно потолочные</a>
+                    <div class="multi_block_box_link_power">
+                        <a href="javascript:void(0)">Потолочные 24</a>
+                        <a href="javascript:void(0)">Потолочные 36</a>
+                        <a href="javascript:void(0)">Потолочные 48</a>
+                        <a href="javascript:void(0)">Потолочные 60</a>
+                    </div>
+                    <div class="multi_block_box_link_kategories">
+                        <a href="javascript:void(0)">Канальные</a>
+                        <a href="javascript:void(0)">VRF системы</a>
+                        <a href="javascript:void(0)">Колонные</a>
+                        <a href="javascript:void(0)">Вентиляция</a>
+                    </div>
+                </div>
                 <div class="multi_block_box multi_block_multi">
-                    <h3 class="multi_block_box_zag">кассетные</h3>
+                    <a href="javascript:void(0)" class="multi_block_box_zag">мульти сплит системы</a>
                     <div class="multi_block_box_link_power">
 
                     </div>
