Добавлен таймер в  шапку

--- a/index.html
+++ b/index.html
@@ -3104,6 +3104,14 @@
                 </div>
                 <div class="header__user_info_info">
                     <div class="time">
+                        <div class="timer" id="timer_header">
+                            <h3 class="zag" id="zag_header">До конца рабочего дня осталось:</h3>
+                            <div class="timer_line">
+                                <div class="timer_block" id="timer_hover" data-timer="10">
+
+                                </div>
+                            </div>
+                        </div>
                         <div class="icon"></div>
                         <div class="time_text">
                             <p>Пн-Пт <i>с</i> 10 <i>до</i> 19</p>
