--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
 </head>
 <body>
 <div class="wraper">
-
-
-    <div class="modal_fon">
-
+       <div class="modal_fon">
+        <div class="foto_block schem_big_block modal" id="foto">
+            <a href="javascript:void(0)" class="close_foto"><i></i></a>
+            <img src="img/foto.jpg" alt="Витрина ВИМТЕХ" title="Витрина ВИМТЕХ">
+        </div>
         <!--блок с миниатюрами схем-->
         <div class="miniature_block modal">
             <a href="javascript:void(0)" class="close_mini"></a>
-            <a href="javascript:void(0)" class="img">
-                <img src="img/foto.jpg" alt="foto" title="foto">
+            <a href="#foto" class="img">
+                <img id="" src="img/foto.jpg" alt="Витрина" title="Витрина">
             </a>
             <a href="#map_big" class="img">
                 <img src="img/map.jpg" alt="map" title="map">
@@ -1520,6 +1521,11 @@
         </div>
         <!--**********************************************************************************************************-->
         <!--/////////////////////////////////////////Модальные окна схема/////////////////////////////////////////// -->
+        <!--Витрина-->
+        <div class="foto_block modal" id="img_big">
+            <a href="javascript:void(0)" class="close_foto"><i></i></a>
+            <img src="img/foto.jpg" alt="Витрина ВИМТЕХ" title="Витрина ВИМТЕХ">
+        </div>
         <!--Карта -->
         <div class="schem_big_block map_block modal" id="map_big">
             <a href="javascript:void(0)" class=" map_close"><i></i></a>
