Поправлен адаптив шапки

--- a/index.html
+++ b/index.html
@@ -3074,8 +3074,10 @@
                     </ul>
                 </nav>
                 <div class="header_nav_logo_line">
+
                     <div class="header_nav_logo_line_logo">
-                        <a href="index.html">
+                        <a href="index.html" class="logo_mini"><img src="img/micro_logo.png" alt="Переход на главную" title="Переход на главную"></a>
+                        <a href="index.html" class="logo_big">
 
                             <i>В</i>ИМТЕХ
                         </a>
