Добавлены тайтлы в поддменю по брендам

--- a/index.html
+++ b/index.html
@@ -2575,12 +2575,12 @@
                                 <a href="javascript:void(0)"></a>
                             </div>
                             <div class="brend_block_box_logo_block">
-                                <a href="javascript:void(0)"><img src="img/good1.png" alt="tosot" title="tosot"></a>
-                                <a href="javascript:void(0)"><img src="img/good2.png" alt="panasonic" title="panasonic"></a>
-                                <a href="javascript:void(0)"><img src="img/good3.png" alt="toshiba" title="toshiba"></a>
-                                <a href="javascript:void(0)"><img src="img/good4.png" alt="mdv" title="mdv"></a>
-                                <a href="javascript:void(0)"><img src="img/good5.png" alt="lessar" title="lessar"></a>
-                                <a href="javascript:void(0)"><img src="img/good6.png" alt="bailu" title="bailu"></a>
+                                <a href="javascript:void(0)"><img src="img/good1.png" alt="Ассортимент, цены кондиционеров (сплит) производителя Tosot" title="Ассортимент, цены кондиционеров (сплит) производителя Tosot"></a>
+                                <a href="javascript:void(0)"><img src="img/good2.png" alt="Ассортимент, цены кондиционеров (сплит) производителя Panasonic" title="Ассортимент, цены кондиционеров (сплит) производителя Panasonic"></a>
+                                <a href="javascript:void(0)"><img src="img/good3.png" alt="Ассортимент, цены кондиционеров (сплит) производителя Toshiba" title="Ассортимент, цены кондиционеров (сплит) производителя Toshiba"></a>
+                                <a href="javascript:void(0)"><img src="img/good4.png" alt="Ассортимент, цены кондиционеров (сплит) производителя MDV" title="Ассортимент, цены кондиционеров (сплит) производителя MDV"></a>
+                                <a href="javascript:void(0)"><img src="img/good5.png" alt="Ассортимент, цены кондиционеров (сплит) производителя Lessar" title="Ассортимент, цены кондиционеров (сплит) производителя Lessar"></a>
+                                <a href="javascript:void(0)"><img src="img/good6.png" alt="Ассортимент, цены кондиционеров (сплит) производителя Ballu" title="Ассортимент, цены кондиционеров (сплит) производителя Ballu"></a>
                             </div>
                         </div>
                     </div>
@@ -2596,10 +2596,10 @@
                                 <a href="javascript:void(0)"></a>
                             </div>
                             <div class="brend_block_box_logo_block">
-                                <a href="javascript:void(0)"><img src="img/cheap1.png" alt="aero" title="aero"></a>
-                                <a href="javascript:void(0)"><img src="img/cheap2.png" alt="vertex" title="vertex"></a>
-                                <a href="javascript:void(0)"><img src="img/cheap3.png" alt="qatro" title="qatro"></a>
-                                <a href="javascript:void(0)"><img src="img/cheap4.png" alt="green" title="green"></a>
+                                <a href="javascript:void(0)"><img src="img/cheap1.png" alt="Ассортимент, цены кондиционеров (сплит) производителя Aero" title="Ассортимент, цены кондиционеров (сплит) производителя Aero"></a>
+                                <a href="javascript:void(0)"><img src="img/cheap2.png" alt="Ассортимент, цены кондиционеров (сплит) производителя vertex" title="Ассортимент, цены кондиционеров (сплит) производителя vertex"></a>
+                                <a href="javascript:void(0)"><img src="img/cheap3.png" alt="Ассортимент, цены кондиционеров (сплит) производителя qatro" title="Ассортимент, цены кондиционеров (сплит) производителя qatro"></a>
+                                <a href="javascript:void(0)"><img src="img/cheap4.png" alt="Ассортимент, цены кондиционеров (сплит) производителя green" title="Ассортимент, цены кондиционеров (сплит) производителя green"></a>
 
                             </div>
                         </div>
@@ -2616,13 +2616,13 @@
                                 <a href="javascript:void(0)" class="star_action"></a>
                             </div>
                             <div class="brend_block_box_logo_block">
-                                <a href="javascript:void(0)"><img src="img/prestig1.png" alt="mitsubishi"
-                                                                  title="mitsubishi"></a>
-                                <a href="javascript:void(0)"><img src="img/prestig2.png" alt="fujitsu" title="fujitsu"></a>
-                                <a href="javascript:void(0)"><img src="img/prestig3.png" alt="darkin"
-                                                                  title="darkin"></a>
-                                <a href="javascript:void(0)"><img src="img/prestig4.png" alt="mitsubishi"
-                                                                  title="mitsubishi"></a>
+                                <a href="javascript:void(0)"><img src="img/prestig1.png" alt="Ассортимент, цены кондиционеров (сплит) производителя mitsubishi"
+                                                                  title="Ассортимент, цены кондиционеров (сплит) производителя mitsubishi"></a>
+                                <a href="javascript:void(0)"><img src="img/prestig2.png" alt="Ассортимент, цены кондиционеров (сплит) производителя fujitsu " title="Ассортимент, цены кондиционеров (сплит) производителя fujitsu"></a>
+                                <a href="javascript:void(0)"><img src="img/prestig3.png" alt="Ассортимент, цены кондиционеров (сплит) производителя darkin"
+                                                                  title="Ассортимент, цены кондиционеров (сплит) производителя darkin"></a>
+                                <a href="javascript:void(0)"><img src="img/prestig4.png" alt="Ассортимент, цены кондиционеров (сплит) производителя mitsubishi"
+                                                                  title="Ассортимент, цены кондиционеров (сплит) производителя mitsubishi"></a>
 
                             </div>
                         </div>
@@ -2639,7 +2639,7 @@
                         <a href="javascript:void(0)" class="brend_block_footer_winner_logo"><img src="img/slogan.jpg"
                                                                                                  alt="" title=""></a>
                     </div>
-                    <a href="javascript:void(0)" class="brend_block_footer_brend_all">
+                    <a href="javascript:void(0)" class="brend_block_footer_brend_all" title="Каталог (более 3650 шт.) сплит в Ростове. Технические характеристики удобный подбор товаров на сайте">
                         <span>Показать все</span>
                         бренды сплит систем
                     </a>
@@ -3088,8 +3088,8 @@
                 </div>
                 <div class="header_nav_katalog_line">
                     <div class="header_nav_katalog">
-                        <a href="javascript:void(0)" class="header_nav_katalog_all">полный КАТАЛОГ сплит систем</a>
-                        <a href="javascript:void(0)" class="all_mini">каталог</a>
+                        <a href="javascript:void(0)" class="header_nav_katalog_all" title="Каталог (более 3650 шт.) сплит в Ростове. Технические характеристики удобный подбор товаров на сайте">полный КАТАЛОГ сплит систем</a>
+                        <a href="javascript:void(0)" class="all_mini" title="Каталог (более 3650 шт.) сплит в Ростове. Технические характеристики удобный подбор товаров на сайте">каталог</a>
                         <div class="header_nav_katalog_categories">
                             <a href="javascript:void(0)" class="button" id="brend_button">по БРЕНДАМ<i></i></a>
                             <a href="javascript:void(0)" class="button" id="area_button">по ПЛОЩАДИ<i></i></a>
