Добавлены все найденные подсказки в чёррную панель

--- a/index.html
+++ b/index.html
@@ -2488,10 +2488,10 @@
                     <h3 class="black_panel_servises_zag">УСЛУГИ</h3>
                     <ul>
                         <li>
-                            <a href="javascript:void(0)">Установка</a>
+                            <a href="javascript:void(0)" title="Стоимость установки сплит в Ростове, заказ и онлайн оплата">Установка</a>
                         </li>
                         <li>
-                            <a href="javascript:void(0)">Чистка</a>
+                            <a href="javascript:void(0)" title="Заказать чистку сплит в Ростове">Чистка</a>
                         </li>
                         <li>
                             <a href="javascript:void(0)">Демонтаж</a>
