Добавлены тайтлы в подменю по брендам

--- a/index.html
+++ b/index.html
@@ -2681,8 +2681,8 @@
             <!--модальное окно по площади начало -->
             <div class="area_block podmenu" id="area">
                 <div class="area_block_power_line">
-                    <div class="area_block_power_line_block ">
-                        <div class="area_block_power_line_block_namder">
+                    <a href="#" class="area_block_power_line_block " >
+                        <div class="area_block_power_line_block_namder" title="Сплит 7 - для маленьких помещений">
                             <p>7</p>
                         </div>
                         <div class="area_block_power_line_block_info">
@@ -2699,16 +2699,16 @@
 
                         </div>
                         <div class="area_block_power_line_block_price">
-                            <p class="area_block_power_line_block_price_net">
+                            <p class="area_block_power_line_block_price_net" title="Дешёвый кондиционер в Ростове, на складе, мощностью 7">
                                 от <span>34 500</span> <i>руб</i>.
                             </p>
-                            <p class="area_block_power_line_block_price_hollow">
+                            <p class="area_block_power_line_block_price_hollow" title="Сплит с установкой по минимальной цене, до 22 кв.м.">
                                 с установкой от <span>37 500</span> <i>руб</i>.
                             </p>
                         </div>
-                    </div>
-                    <div class="area_block_power_line_block ">
-                        <div class="area_block_power_line_block_namder">
+                    </a>
+                    <a href="#" class="area_block_power_line_block ">
+                        <div class="area_block_power_line_block_namder" title="Сплит двенадцатый, до 36 кв.м.">
                             <p class="big">12</p>
                         </div>
                         <div class="area_block_power_line_block_info">
@@ -2725,16 +2725,16 @@
 
                         </div>
                         <div class="area_block_power_line_block_price">
-                            <p class="area_block_power_line_block_price_net">
+                            <p class="area_block_power_line_block_price_net" title="Дешёвый кондиционер в Ростове, на складе, мощностью 12">
                                 от <span>34 500</span> <i>руб</i>.
                             </p>
-                            <p class="area_block_power_line_block_price_hollow">
+                            <p class="area_block_power_line_block_price_hollow" title="Сплит с установкой по минимальной цене, до 38 кв.м.">
                                 с установкой от <span>37 500</span> <i>руб</i>.
                             </p>
                         </div>
-                    </div>
-                    <div class="area_block_power_line_block ">
-                        <div class="area_block_power_line_block_namder">
+                    </a>
+                    <a href="#" class="area_block_power_line_block ">
+                        <div class="area_block_power_line_block_namder" title="24 - мощные настенные кондиционеры для больших помещений">
                             <p class="big">24</p>
                         </div>
                         <div class="area_block_power_line_block_info">
@@ -2751,16 +2751,16 @@
 
                         </div>
                         <div class="area_block_power_line_block_price">
-                            <p class="area_block_power_line_block_price_net">
+                            <p class="area_block_power_line_block_price_net" title="Дешёвый кондиционер в Ростове, на складе, мощностью 24">
                                 от <span>34 500</span> <i>руб</i>.
                             </p>
-                            <p class="area_block_power_line_block_price_hollow">
+                            <p class="area_block_power_line_block_price_hollow" title="Сплит с установкой по минимальной цене, до 75 кв.м.">
                                 с установкой от <span>37 500</span> <i>руб</i>.
                             </p>
                         </div>
-                    </div>
-                    <div class="area_block_power_line_block ">
-                        <div class="area_block_power_line_block_namder">
+                    </a>
+                    <a href="#" class="area_block_power_line_block ">
+                        <div class="area_block_power_line_block_namder" title="Сплит девятка - 2,5 кВт холода">
                             <p>9</p>
                         </div>
                         <div class="area_block_power_line_block_info">
@@ -2777,16 +2777,16 @@
 
                         </div>
                         <div class="area_block_inverter_block_price">
-                            <p class="area_block_inverter_block_price_net">
+                            <p class="area_block_inverter_block_price_net" title="Дешёвый кондиционер в Ростове, на складе, мощностью 9">
                                 от <span>34 500</span> <i>руб</i>.
                             </p>
-                            <p class="area_block_inverter_block_price_hollow">
+                            <p class="area_block_inverter_block_price_hollow" title="Сплит с установкой по минимальной цене, до 29 кв.м.">
                                 с установкой от <span>37 500</span> <i>руб</i>.
                             </p>
                         </div>
-                    </div>
-                    <div class="area_block_power_line_block ">
-                        <div class="area_block_power_line_block_namder">
+                    </a>
+                    <a href="#" class="area_block_power_line_block ">
+                        <div class="area_block_power_line_block_namder" title="Сплит 18 - 4 кВт производительность , до 50 кв.м.">
                             <p class="big">18</p>
                         </div>
                         <div class="area_block_power_line_block_info">
@@ -2803,44 +2803,44 @@
 
                         </div>
                         <div class="area_block_power_line_block_price">
-                            <p class="area_block_power_line_block_price_net">
+                            <p class="area_block_power_line_block_price_net" title="Дешёвый кондиционер в Ростове, на складе, мощностью 18">
                                 от <span>34 500</span> <i>руб</i>.
                             </p>
-                            <p class="area_block_power_line_block_price_hollow">
+                            <p class="area_block_power_line_block_price_hollow" title="Сплит с установкой по минимальной цене, до 53 кв.м.">
                                 с установкой от <span>37 500</span> <i>руб</i>.
                             </p>
                         </div>
-                    </div>
+                    </a>
                     <div class="area_block_inverter">
                         <div class="area_block_inverter_block">
-                            <a href="javascript:void(0)" class="area_block_inverter_block_name">ИНВЕРТОРНЫЕ сплит 7 </a>
+                            <a href="javascript:void(0)" class="area_block_inverter_block_name" title="Инверторные семёрки - отлично для детской комнаты">ИНВЕРТОРНЫЕ сплит 7 </a>
                             <div class="area_block_">
-                                <p class="area_block_power_line_block_price_net">
+                                <p class="area_block_power_line_block_price_net" title="Самая недорогая модель в категории инверторные 7">
                                     от <span>34 500</span> <i>руб</i>.
                                 </p>
-                                <p class="area_block_power_line_block_price_hollow">
+                                <p class="area_block_power_line_block_price_hollow" title="Доступный, недорогой инверторный сплит с установкой, мощность 7">
                                     с установкой от <span>37 500</span> <i>руб</i>.
                                 </p>
                             </div>
                         </div>
                         <div class="area_block_inverter_block">
-                            <a href="javascript:void(0)" class="area_block_inverter_block_name">ИНВЕРТОРНЫЕ сплит 7 </a>
+                            <a href="javascript:void(0)" class="area_block_inverter_block_name" title="Инверторные девятки - хороший выбор для спальни">ИНВЕРТОРНЫЕ сплит 9 </a>
                             <div class="area_block_">
-                                <p class="area_block_power_line_block_price_net">
+                                <p class="area_block_power_line_block_price_net" title="Самая недорогая модель в категории инверторные девятки">
                                     от <span>34 500</span> <i>руб</i>.
                                 </p>
-                                <p class="area_block_power_line_block_price_hollow">
+                                <p class="area_block_power_line_block_price_hollow" title="Доступный, недорогой инверторный сплит с установкой, мощность 9">
                                     с установкой от <span>37 500</span> <i>руб</i>.
                                 </p>
                             </div>
                         </div>
                         <div class="area_block_inverter_block">
-                            <a href="javascript:void(0)" class="area_block_inverter_block_name">ИНВЕРТОРНЫЕ сплит 7 </a>
+                            <a href="javascript:void(0)" class="area_block_inverter_block_name" title="Инверторные 12 - правильный выбор для кухни столовой">ИНВЕРТОРНЫЕ сплит 12 </a>
                             <div class="area_block_">
-                                <p class="area_block_power_line_block_price_net">
+                                <p class="area_block_power_line_block_price_net" title="Самая недорогая модель в категории инверторные 12">
                                     от <span>34 500</span> <i>руб</i>.
                                 </p>
-                                <p class="area_block_power_line_block_price_hollow">
+                                <p class="area_block_power_line_block_price_hollow" title="Доступный, недорогой инверторный сплит с установкой, мощность 12">
                                     с установкой от <span>37 500</span> <i>руб</i>.
                                 </p>
                             </div>
