Добавлены подсказки в подменю "По оценке"

--- a/index.html
+++ b/index.html
@@ -2853,12 +2853,12 @@
             <!--модальное окно по цене начало -->
             <div class="price_block podmenu" id="price">
                 <div class="price_block_link">
-                    <a href="javascript:void(0)" class="price_block_link_retail price_block_link_block">
+                    <a href="javascript:void(0)" class="price_block_link_retail price_block_link_block" title="Стоимость в Ростове кондиционеров (сплит систем) различных брендов и типов">
                         <img src="img/price.png" alt="" title="">
                         <p>Цены на сплит</p>
                     </a>
                     <a href="javascript:void(0)" class="price_block_link_gross price_block_link_block">
-                        <img src="img/opt.png" alt="" title="">
+                        <img src="img/opt.png" alt="" title="Продажа сплит систем оптом">
                         <p>Оптовые цены<br>
                             сплит систем</p>
                     </a>
@@ -2881,14 +2881,14 @@
                 </div>
                 <div class="price_block_nav">
                     <ul>
-                        <li><a href="#img1">хорошие</a></li>
-                        <li><a href="#img2">с "наворотами"</a></li>
-                        <li><a href="#img3">лушая цена в Ростове</a></li>
-                        <li><a href="#img4">дизайнерские</a></li>
-                        <li><a href="#img5">сделано НЕ в КИТАЕ</a></li>
-                        <li><a href="#img6">дешёвые</a></li>
-                        <li><a href="#img7">недорогие инверторные</a></li>
-                        <li><a href="#img8">с бесплатной установкой</a></li>
+                        <li><a href="#img1" title="Отличное качество и не очень высокая цена">хорошие</a></li>
+                        <li><a href="#img2" title="Сплит с новейшими функциями (Wi-FI, датчик присутствия, с ионизатором, суперфильтрами) ">с "наворотами"</a></li>
+                        <li><a href="#img3" title="Техника с самой выгодной в Ростове ценой">лушая цена в Ростове</a></li>
+                        <li><a href="#img4" title="Сплит с цветными внутренними блоками (чёрные, красные, золотые)">дизайнерские</a></li>
+                        <li><a href="#img5" title="Кондиционеры которые изготавливаются за пределами Китайской Народной Республики">сделано НЕ в КИТАЕ</a></li>
+                        <li><a href="#img6" title="Кондиционеры по низкой цене и приемлемым качеством">дешёвые</a></li>
+                        <li><a href="#img7" title="Современные дешёвые инверторные сплит в Ростове, на складе">недорогие инверторные</a></li>
+                        <li><a href="#img8" title="Сплит с бесплатным монтажом - более 140 моделей">с бесплатной установкой</a></li>
                     </ul>
                 </div>
             </div>
@@ -3200,7 +3200,7 @@
             <div class="header_kontakt">
                 <ul class="header_kontakt_action">
                     <li>
-                        <a href="javascript:void(0)">Акции и скидки</a>
+                        <a href="javascript:void(0)" title="Скидки на сплит (кондиционеры) в Ростове, в т.ч. витринные образцы">Акции и скидки</a>
                     </li>
                 </ul>
                 <div class="header_kontakt_line">
@@ -3213,7 +3213,7 @@
                     </a>
                 </div>
                 <div class="header_kontakt_line_button_line">
-                    <a href="javascript:void(0)" class="button">Инверторные</a>
+                    <a href="javascript:void(0)" class="button" title="Инверторные кондиционеры в климатическом магазине ВИМТЕХ - цены, новинки, отзывы, характеристики">Инверторные</a>
                 </div>
             </div>
 
